# QuickChat

./: Dockerfile  README.md  completions.py  config.toml  pyproject.toml  requirements.txt  ui.py
