[tool.poetry]
name = "quick-chat"
version = "0.1.0"
description = ""
authors = ["liuchuan <lanhaichen2021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.57.4"
requests = "^2.32.3"
aiohttp = "^3.11.10"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
